# tiny-python-tools

./: README.md  pyproject.toml
src/fileop/: batch_add_num.py  batch_rename.py  docx_file_rw.py  excel_change_style.py
src/harbor/: export_images.py
src/hdfs/: copy_hdfs_files_to_local.py
src/math/: slove.py
src/nlp/: time_convert.py
src/vanna/: text2sql.py
