[project]
name = "tiny-python-tools"
version = "0.1.0"
description = "Python小工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pyhdfs>=0.3.1",
    "python-docx>=1.2.0",
    "setuptools>=80.9.0",
    "time-nlp>=1.1.3",
    "vanna>=0.7.9",
    "wheel>=0.45.1",
]
